--- a/src/styles/globals/_util.scss
+++ b/src/styles/globals/_util.scss
@@ -16,12 +16,16 @@
   src: url("/assets/fonts/Ubuntu-Medium.ttf");
 }
 
+@font-face {
+  font-family: "Ubuntu Large";
+  src: url("/assets/fonts/Ubuntu-Bold.ttf");
+}
 :root {
   --marine-blue: hsl(213, 96%, 18%);
   --puplish-blue: hsl(243, 100%, 62%);
   --pastel-blue: hsl(228, 100%, 84%);
   --light-blue: hsl(206, 94%, 87%);
-  --strawberry-red: hsl(206, 94%, 87%);
+  --strawberry-red: hsl(354, 84%, 57%);
   
   --cool-gray: hsl(231, 11%, 63%);
   --light-gray: hsl(229, 24%, 87%);
@@ -40,6 +44,14 @@
   --debbug-bg: indianred;
   --font: "ubuntu";
   --font-l: "Ubuntu Medium";
+  --font-xl: "Ubuntu Large";
+  --font-size-small: clamp(.8rem,8vmin,.95rem);
+  --font-size-medium: clamp(1.2rem, 10vmin, 1.4rem);
+  --font-size-large: clamp(1.8rem, 13vmin, 2rem);
+  --font-size-xlarge: clamp(2.5rem, 20vmin, 3rem);
+
+
+  --trans-default: all .2s ease;
 }
 
 html {
@@ -50,8 +62,105 @@ html {
 
   background-color: var(--light-gray);
 
-  body {
+  body , #app{
   width: inherit;
-  min-width: inherit;
+  min-height: inherit;
+  }
+}
+
+#app {
+  display: flex;
+  justify-content: var(--cn);
+  align-items: var(--cn);
+}
+
+.title {
+ color: var(--marine-blue);
+ font-size: var(--font-size-large);
+ font-family: var(--font-xl);
+ &__sub {
+  color: var(--cool-gray);
+  font-size: var(--font-size-small);
+  line-height: 1.4;
+ }
+}
+
+h2 {
+  color: var(--wt);
+  font-size: var(--font-size-small);
+  font-family: var(--font-xl);
+  letter-spacing: 1px;
+}
+
+
+.btn {
+  border-radius: calc(var(--rad) / 2);
+  font-family: var(--font-xl);
+  width: 5.7rem;
+  height: 2.4rem;
+  box-shadow: 2px 1px 4px 0 rgba(0,0,0,.1);
+  transition: var(--trans-default);
+
+  &.next {
+  border: 1px solid var(--marine-blue);
+  background-color: var(--marine-blue);
+  color: var(--magnolia);
+  }
+  &.prev {
+    color: var(--cool-gray);
+    border-color: var(--ts);
+    background-color: var(--ts);
+    box-shadow: unset;
+  }
+
+  &.next.click {
+    opacity: .9;
+    transition: var(--trans-default);
+    transform: translate3d(10%, 0, 0);
+  }
+
+  &.prev.click {
+    opacity: .9;
+    transition: var(--trans-default);
+    transform: translate3d(-10%, 0, 0);
+  }
+}
+
+input {
+  border: 3px solid var(--cool-gray);
+  outline: none;
+  border-radius: var(--rad);
+  padding: 1% 3%;
+  color: var(--cool-gray);
+  transition: var(--trans-default);
+
+  &:hover {
+    border-color: var(--marine-blue);
+    transition: var(--trans-default);
+  }
+}
+
+.load {
+  display: block;
+  height: 3.125rem;
+  aspect-ratio: 1;
+  position: relative;
+  border: 5px double var(--ts);
+  border-bottom-color: var(--puplish-blue);
+  border-left-color: var(--puplish-blue);
+  border-radius: var(--round);
+
+  animation: rad 1s ease infinite;
+}
+
+.hide {
+  display: none !important;
+}
+
+
+
+@keyframes rad {
+  to {
+    transform: rotate(360deg);
   }
 }
