doing what we know best 003

--- a/src/styles/globals/_base.scss
+++ b/src/styles/globals/_base.scss
@@ -1,11 +1,11 @@
 .main {
-//  border: var(--debbug);
+  //  border: var(--debbug);
   height: 70vh;
   width: 80%;
   align-self: var(--cn);
 
   border-radius: var(--rad);
-  box-shadow: 3px 4px var(--rad) 0 rgba(0,0,0,.1);
+  box-shadow: 3px 4px var(--rad) 0 rgba(0, 0, 0, 0.1);
   background-color: var(--wt);
 
   padding: 2%;
@@ -18,13 +18,13 @@
     grid-column: 1/3;
     grid-row: 1/6;
     border-radius: inherit;
-    background: var(--puplish-blue) url("/assets/images/bg-sidebar-desktop.svg") no-repeat border-box var(--cn)/ 100% 100%;
-    
+    background: var(--puplish-blue) url("/assets/images/bg-sidebar-desktop.svg")
+      no-repeat border-box var(--cn) / 100% 100%;
 
     &__box {
       display: flex;
       justify-content: space-evenly;
-      flex: .1 1 auto;
+      flex: 0.1 1 auto;
 
       span {
         color: var(--cool-gray);
@@ -52,9 +52,9 @@
       }
 
       div {
-       height: max-content;
-       min-width: 101px;
-       align-self: var(--cn);
+        height: max-content;
+        min-width: 101px;
+        align-self: var(--cn);
       }
     }
   }
@@ -67,10 +67,10 @@
 }
 
 .step__box {
-   height: 60%;
-   display: flex;
-   flex-flow: column;
-   justify-content: space-evenly;
+  height: 60%;
+  display: flex;
+  flex-flow: column;
+  justify-content: space-evenly;
 }
 
 .card {
@@ -81,19 +81,19 @@
   justify-content: space-evenly;
 
   &__info {
-    flex: .03 1 auto;
+    flex: 0.03 1 auto;
     display: flex;
     flex-flow: column;
     justify-content: space-between;
 
     &__contact {
-      flex: .6 1 auto;
+      flex: 0.6 1 auto;
       display: flex;
       flex-flow: column;
       justify-content: space-around;
 
       label {
-        flex: .2 1 auto;
+        flex: 0.2 1 auto;
         display: flex;
         flex-flow: column;
         justify-content: space-around;
@@ -102,65 +102,63 @@
       }
 
       input {
-        flex: .5 1 auto;
+        flex: 0.5 1 auto;
       }
     }
   }
 
   &__plan {
-    flex: .3 1 auto;
+    flex: 0.3 1 auto;
     min-height: 21.68rem;
     display: flex;
     flex-flow: column;
     justify-content: space-around;
 
     &__select {
-      flex: .4 1 auto;
+      flex: 0.4 1 auto;
       display: grid;
-      grid-template-columns: repeat(3,1fr);
+      grid-template-columns: repeat(3, 1fr);
       grid-template-rows: 1fr;
       grid-column-gap: 1rem;
 
       .plan__box {
-      border: 2px solid var(--cool-gray);
+        border: 2px solid var(--cool-gray);
+        border-radius: calc(var(--rad) / 2);
+        display: flex;
+        flex-flow: column;
+        justify-content: space-around;
+
+        padding-inline-start: 8%;
+        transition: var(--trans-default);
+
+        &.click {
+          border-color: var(--puplish-blue);
+          background-color: var(--light-gray);
+        }
+
+        &:hover {
+          transition: var(--trans-default);
+          border-color: var(--strawberry-red);
+          transform: translate3d(0, -5%, 0);
+        }
+      }
+    }
+
+    &__toggle {
+      background-color: var(--light-gray);
+      height: 2.6rem;
       border-radius: calc(var(--rad) / 2);
       display: flex;
-      flex-flow: column;
-      justify-content: space-around;
+      justify-content: var(--cn);
+      align-items: var(--cn);
 
-      padding-inline-start: 8%;
-      transition: var(--trans-default);
-
-      &.click {
-        border-color: var(--puplish-blue);
-        background-color: var(--light-gray);
-      }
-
-      &:hover {
-        transition: var(--trans-default);
-        border-color: var(--strawberry-red);
-        transform: translate3d(0, -5%, 0);
-      }
-
+      div {
+        width: 60%;
+        display: flex;
+        justify-content: space-between;
+        align-items: var(--cn);
       }
     }
-
-   &__toggle {
-    background-color: var(--light-gray);
-    height: 2.6rem;
-    border-radius: calc(var(--rad) / 2);
-    display: flex;
-    justify-content: var(--cn);
-    align-items: var(--cn);
-
-    div {
-      width: 50%;
-      display: flex;
-     justify-content: space-between;
-     align-items: var(--cn);
-    }
-   }
-  
 
     .title {
       font-size: var(--font-size-small);
@@ -178,24 +176,21 @@
   }
 
   &__btn {
-   display: flex;
-   flex-flow: row;
-   justify-content: flex-end;
+    display: flex;
+    flex-flow: row;
+    justify-content: flex-end;
 
-  &.two {
-    justify-content: space-between;
- }
+    &.two {
+      justify-content: space-between;
+    }
   }
 }
 
-
-
-@media screen and (max-width: 1399.98px) {
-  
+@media screen and (min-width: 1399.98px) {
+ 
 }
 
 @media screen and (max-width: 1199.98px) {
-  
 }
 
 @media screen and (max-width: 991.98px) {
@@ -206,9 +201,10 @@
 }
 
 @media screen and (max-width: 767.98px) {
-  
+  #main {
+    background-color: var(--puplish-blue);
+  }
 }
 
 @media screen and (max-width: 575.98px) {
-  
 }
