looking at the design

--- a/src/styles/globals/_base.scss
+++ b/src/styles/globals/_base.scss
@@ -220,15 +220,41 @@
   }
 
   &__summary {
-    background-color: var(--light-blue);
-    // flex: 0.5 1 auto;
+    display: flex;
+    flex-flow: column;
+    justify-content: space-between;
     height: 16.875rem;
 
     .select__plan {
-      a,
-      span {
-        display: inline-block;
+      flex: 0.3 1 auto;
+      p {
+        height: 100%;
+        @extend .fx-evenly;
+        flex-flow: column;
       }
+      a {
+        width: min-content;
+        align-self: flex-start;
+      }
+      
+    }
+    .select__result {
+      flex: 0.3 1 auto;
+      display: flex;
+      flex-flow: column;
+      justify-content: space-around;
+    }
+
+    &__confirm {
+      background-color: hsla(229, 24%, 87%, .7);
+      border-radius: calc(var(--rad) / 2);
+      padding: 2% 4%;
+      flex: 0.8 1 auto;
+      display: flex;
+      flex-flow: column;
+      justify-content: space-around;
+
+      box-shadow: 3px 2px 4px 0 rgba(0, 0, 0, 0.1);
     }
   }
 
@@ -263,12 +289,11 @@
 }
 
 @media screen and (max-width: 991.98px) {
-
   :root {
     --font-size-small: clamp(0.8rem, 6vmin, 0.95rem);
-  --font-size-medium: clamp(1.1rem, 7vmin, 1.2rem);
-  --font-size-large: clamp(1.6rem, 10vmin, 1.8rem);
-  --font-size-xlarge: clamp(2.1rem, 16vmin, 2.8rem);
+    --font-size-medium: clamp(1.1rem, 7vmin, 1.2rem);
+    --font-size-large: clamp(1.6rem, 10vmin, 1.8rem);
+    --font-size-xlarge: clamp(2.1rem, 16vmin, 2.8rem);
   }
   #main {
     height: 32.5rem;
@@ -279,25 +304,25 @@
 @media screen and (max-width: 767.98px) {
   :root {
     --font-size-small: clamp(0.8rem, 5vmin, 0.9rem);
-  --font-size-medium: clamp(1.1rem, 7vmin, 1.2rem);
-  --font-size-large: clamp(1.4rem, 10vmin, 1.8rem);
-  --font-size-xlarge: clamp(2.1rem, 15vmin, 2.5rem);
+    --font-size-medium: clamp(1.1rem, 7vmin, 1.2rem);
+    --font-size-large: clamp(1.4rem, 10vmin, 1.8rem);
+    --font-size-xlarge: clamp(2.1rem, 15vmin, 2.5rem);
   }
   #main {
-    // background-color: var(--puplish-blue);
+    display: block
   }
 }
 
 @media screen and (max-width: 575.98px) {
   :root {
     --font-size-small: clamp(0.8rem, 5vmin, 0.9rem);
-  --font-size-medium: clamp(1.1rem, 7vmin, 1.2rem);
-  --font-size-large: clamp(1.4rem, 10vmin, 1.8rem);
-  --font-size-xlarge: clamp(2.1rem, 15vmin, 2.5rem);
+    --font-size-medium: clamp(1.1rem, 7vmin, 1.15rem);
+    --font-size-large: clamp(1.2rem, 10vmin, 1.6rem);
+    --font-size-xlarge: clamp(2.1rem, 15vmin, 2.3rem);
   }
 
   #main {
-    // background-color: var(--cool-gray);
+    display: block;
   }
 }
 
