--- a/src/styles/globals/_base.scss
+++ b/src/styles/globals/_base.scss
@@ -309,7 +309,82 @@
     --font-size-xlarge: clamp(2.1rem, 15vmin, 2.5rem);
   }
   #main {
-    display: block;
+    display: grid;
+    grid-template-rows: repeat(7, 1fr);
+    grid-template-columns: 1fr;
+
+    height: 40.625rem;
+    width: 25rem;
+    padding: 0;
+
+    background-color: var(--light-gray);
+
+    .main__steps {
+      grid-column: 1/1;
+      grid-row: 1/3;
+      border-radius: unset;
+      background: var(--puplish-blue)
+        url("/assets/images/bg-sidebar-mobile.svg") no-repeat border-box top
+        left / cover;
+      i {
+        height: 2.5rem;
+        aspect-ratio: 1;
+      }
+
+      .step__box {
+        flex-flow: row;
+      }
+
+      &__box div {
+        display: none;
+      }
+    }
+
+    .main__cards {
+      grid-row: 2/8;
+      grid-column: 1/1;
+    }
+    .card {
+      width: 90%;
+      margin: auto;
+      padding: 6% 3%;
+      border-radius: var(--rad);
+      border-bottom-left-radius: 0;
+      border-bottom-right-radius: 0;
+
+      justify-content: space-between;
+      background-color: var(--wt);
+
+      &__info {
+        flex: 0.1 1 auto;
+        &__contact {
+          flex: 0.2 1 auto;
+        }
+      }
+
+      &__plan {
+        justify-content: space-between;
+        flex: 0.4 1 auto;
+
+        &__select {
+          flex: 0.3 1 auto;
+          grid-template-columns: 1fr;
+          grid-template-rows: repeat(3, 1fr);
+          grid-row-gap: 1rem;
+        }
+      }
+
+      .plan__box {
+        padding: 2%;
+        flex-direction: row;
+        div {
+          flex: 0.8 1 auto;
+          display: flex;
+          justify-content: space-around;
+          flex-direction: column;
+        }
+      }
+    }
   }
 }
 
@@ -322,7 +397,9 @@
   }
 
   #main {
-    display: block;
+    // display: block;
+    width: 100%;
+    height: 100vh;
   }
 }
 
