--- a/src/styles/globals/_util.scss
+++ b/src/styles/globals/_util.scss
@@ -115,6 +115,9 @@ button {
     border-color: var(--ts);
     background-color: var(--ts);
     box-shadow: unset;
+    &:hover {
+      color: var(--marine-blue);
+    }
   }
 
   &.end {
