--- a/src/styles/globals/_animate.scss
+++ b/src/styles/globals/_animate.scss
@@ -19,3 +19,12 @@
     transform: rotate(360deg);
   }
 }
+
+@keyframes main {
+  from {
+    transform: translate3d(0, -100vh, 0);
+  }
+  to {
+    transform: translate3d(0, 0, 0);
+  }
+}
